cmake_minimum_required(VERSION 3.17)
project(Advanced_Cpp_course_4_sem)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(homework_1)
add_subdirectory(homework_2)
add_subdirectory(homework_3)
add_subdirectory(homework_4)
add_subdirectory(homework_5)
add_subdirectory(homework_6)
add_subdirectory(homework_7)
add_subdirectory(homework_8)