cmake_minimum_required(VERSION 3.17)
project(homework_3)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(vector_with_sort_vs_set)
add_subdirectory(my_hash_for_double)
add_subdirectory(hash_function_from_boost_test)
add_subdirectory(phone_book)
add_subdirectory(hash_functions_comparison)
add_subdirectory(hash_function_from_boost_v2)
add_subdirectory(hash_functions_comparison_v2)